test/corpus/def.txt
===
fnDef
===

fn main<T: Bar + Baz>(a: T): Foo<T> {}

---

(module
  (fnDef
    (FN_KEYWORD)
    (NAME)
    (generics
      (O_ANGLE)
      (generic
        (NAME)
        (COLON)
        (typeBounds
          (identifier
            (NAME))
          (PLUS)
          (identifier
            (NAME))))
      (C_ANGLE))
    (params
      (O_PAREN)
      (param
        (pattern
          (NAME))
        (typeAnnot
          (COLON)
          (type
            (typeBounds
              (identifier
                (NAME))))))
      (C_PAREN))
    (typeAnnot
      (COLON)
      (type
        (typeBounds
          (identifier
            (NAME)
            (typeArgs
              (O_ANGLE)
              (type
                (typeBounds
                  (identifier
                    (NAME))))
              (C_ANGLE))))))
    (block
      (O_BRACE)
      (C_BRACE))))

===
traitDef
===

trait Display {
    fn fmt(self): String
}

---

(module
  (traitDef
    (TRAIT_KEYWORD)
    (NAME)
    (block
      (O_BRACE)
      (fnDef
        (FN_KEYWORD)
        (NAME)
        (params
          (O_PAREN)
          (param
            (pattern
              (NAME)))
          (C_PAREN))
        (typeAnnot
          (COLON)
          (type
            (typeBounds
              (identifier
                (NAME))))))
      (C_BRACE))))

===
typeDef
===

type Vec2(x: Float, y: Float)

---

(module
  (typeDef
    (TYPE_KEYWORD)
    (NAME)
    (variantParams
      (O_PAREN)
      (fieldDef
        (NAME)
        (typeAnnot
          (COLON)
          (type
            (typeBounds
              (identifier
                (NAME))))))
      (COMMA)
      (fieldDef
        (NAME)
        (typeAnnot
          (COLON)
          (type
            (typeBounds
              (identifier
                (NAME))))))
      (C_PAREN))))

===
typeDef variant
===

type Shape {
    Rectangle(width: Num, height: Num),
    Circle(radius: Num),
}

---

(module
  (typeDef
    (TYPE_KEYWORD)
    (NAME)
    (variantList
      (O_BRACE)
      (variant
        (NAME)
        (variantParams
          (O_PAREN)
          (fieldDef
            (NAME)
            (typeAnnot
              (COLON)
              (type
                (typeBounds
                  (identifier
                    (NAME))))))
          (COMMA)
          (fieldDef
            (NAME)
            (typeAnnot
              (COLON)
              (type
                (typeBounds
                  (identifier
                    (NAME))))))
          (C_PAREN)))
      (COMMA)
      (variant
        (NAME)
        (variantParams
          (O_PAREN)
          (fieldDef
            (NAME)
            (typeAnnot
              (COLON)
              (type
                (typeBounds
                  (identifier
                    (NAME))))))
          (C_PAREN)))
      (COMMA)
      (C_BRACE))))

===
varDef
===

let Vec2::Vec2(x) = vec

---

(module
  (varDef
    (LET_KEYWORD)
    (pattern
      (conPattern
        (identifier
          (NAME)
          (COLON)
          (COLON)
          (NAME))
        (conPatternParams
          (O_PAREN)
          (fieldPattern
            (NAME))
          (C_PAREN))))
    (EQUALS)
    (expr
      (subExpr
        (identifier
          (NAME))))))
